--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ classifiers = [
 requires-python = ">=3.8"
 dependencies = [
     "numba",
-    "liionpack==0.3.8",
-    "pybamm==23.9",
+    #"liionpack>=0.3.11",
+    "pybamm==24.9",
     "openpnm==2.8.2",
     "ffmpeg-python",
     "ipywidgets"
